--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/css": "^11.13.0",
     "@nuxtjs/emotion": "^0.1.0",
     "ant-design-vue": "^4.2.3",
+    "date-fns": "^3.6.0",
     "graphql": "^16.9.0",
     "graphql-request": "^7.1.0",
     "graphql-tag": "^2.12.6",
@@ -23,6 +24,7 @@
   },
   "devDependencies": {
     "@nuxt/typescript-build": "^3.0.2",
+    "@types/date-fns": "^2.6.0",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.45",
     "tailwindcss": "^3.4.10"
