--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "lint": "eslint ."
   },
   "dependencies": {
     "@emotion/css": "^11.13.0",
@@ -23,10 +24,15 @@
     "vue-router": "latest"
   },
   "devDependencies": {
+    "@eslint/js": "^9.10.0",
     "@nuxt/typescript-build": "^3.0.2",
     "@types/date-fns": "^2.6.0",
     "autoprefixer": "^10.4.20",
+    "eslint": "^9.10.0",
+    "eslint-plugin-vue": "^9.28.0",
+    "globals": "^15.9.0",
     "postcss": "^8.4.45",
-    "tailwindcss": "^3.4.10"
+    "tailwindcss": "^3.4.10",
+    "typescript-eslint": "^8.5.0"
   }
 }
