fix: change ant design vue import method

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@ant-design-vue/nuxt": "^1.4.2",
     "@emotion/css": "^11.13.0",
     "@nuxtjs/emotion": "^0.1.0",
     "ant-design-vue": "^4.2.3",
