--- a/package.json
+++ b/package.json
@@ -11,15 +11,18 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@ant-design-vue/nuxt": "^1.4.2",
+    "@ant-design-vue/nuxt": "^1.4.5",
     "@emotion/css": "^11.13.0",
     "@nuxtjs/emotion": "^0.1.0",
-    "ant-design-vue": "^4.2.3",
+    "@pinia/nuxt": "^0.6.1",
+    "ant-design-vue": "4.x",
     "date-fns": "^3.6.0",
     "graphql": "^16.9.0",
     "graphql-request": "^7.1.0",
     "graphql-tag": "^2.12.6",
+    "moment": "^2.30.1",
     "nuxt": "^3.13.0",
+    "pinia-plugin-persistedstate": "^4.1.2",
     "urql": "^4.1.0",
     "vue": "latest",
     "vue-router": "latest"
