--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "graphql": "^16.9.0",
     "graphql-request": "^7.1.0",
     "graphql-tag": "^2.12.6",
+    "lodash-es": "^4.17.21",
     "moment": "^2.30.1",
     "nuxt": "^3.13.0",
     "pinia-plugin-persistedstate": "^4.1.2",
